# deckplayer

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  flatpak.yml
packaging/flatpak/: build-flatpak.sh  io.github.zeclorn.DeckPlayer.desktop  io.github.zeclorn.DeckPlayer.metainfo.xml  io.github.zeclorn.DeckPlayer.yml  io.github.zeclorn.SteamDeckMediaPlayer.desktop  io.github.zeclorn.SteamDeckMediaPlayer.metainfo.xml  io.github.zeclorn.SteamDeckMediaPlayer.yml
packaging/linux/: build-appimage.sh  deckplayer.desktop  steamdeckmediaplayer.desktop
packaging/obs/: README.md  deckplayer.spec  install-appimage.sh  steamdeckmediaplayer.spec
qml/: BrowserView.qml  Main.qml  PlayerView.qml
src/: AppState.cpp  AppState.h  ControllerInput.cpp  ControllerInput.h  FileBrowserModel.cpp  FileBrowserModel.h  MpvVideoItem.cpp  MpvVideoItem.h  main.cpp
